tests/NormalTests/paczka1/fuzzy1/96259142.err
Error in line 1: yVNnOOr22VC S982 84,8
Error in line 3: S654 A913 5,2
Error in line 10: yVNnOOr22VC S654 77,7
Error in line 23: yVNnOOr22VC A61 -2,4
Error in line 33: S654 A61 14E,3
